devauth fix, removed guestbook (useless), blogs fix, settings fix, scrollbars visibility fix, interests (1/3) fix

--- a/storage/internal/styles/page-styles.css
+++ b/storage/internal/styles/page-styles.css
@@ -726,3 +726,11 @@ pre.shiki {
     background: hsl(var(--card)) !important;
     border-color: hsl(var(--border)) !important;
 }
+
+::-webkit-scrollbar {
+    display: none !important;
+}
+* {
+    scrollbar-width: none !important;
+    -ms-overflow-style: none !important;
+}
